--- a/src/styles/projectStyle.css
+++ b/src/styles/projectStyle.css
@@ -5,7 +5,7 @@
         margin: 0;
     }
 
-    .projectComponent {
+    .projectComponent { 
         width: 100%;
         overflow: hidden;
     }
@@ -14,5 +14,20 @@
         position: relative;
         right: 50%;
         transform: translateX(47%);
+    }
+
+    .image-slider {
+        width: 100vw;
+        height: auto;
+    }
+
+    .visible-image {
+        position: fixed;
+        z-index: 1;
+        width: 100%;
+        height: 50vh;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
