--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -13,6 +13,10 @@
     font-size: 1.25em;
 }
 
+.paragraphAbout {
+    padding-top: 5px;
+}
+
 @media screen and (max-width: 767px) {
     .aboutMeMainDiv {
         width: 100%;
