--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -20,6 +20,7 @@
 @media screen and (max-width: 767px) {
     .aboutMeMainDiv {
         width: 100%;
+        height: auto;
     }
 
     .headerAboutDiv {
