--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -25,6 +25,9 @@
 
     .headerAboutDiv {
         display: inline-block;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     .headerAboutDiv > *{
