--- a/src/styles/headerStyle.css
+++ b/src/styles/headerStyle.css
@@ -42,6 +42,7 @@
         justify-content: center;
         text-align: center;
         display: flex;
+        overflow: hidden;
     }
 
     .contactLink {
